Fix margins and card wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ footer {
     align-items: center;
     background-color: var(--dark);
     color: var(--light);
-    padding: 16px;
+    padding: 1rem;
 }
 
 nav,
@@ -59,19 +59,16 @@ nav ul {
 }
 
 .hero {
-    align-items: center;
-    gap: 32px;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    padding-right: 0;
-    padding: 80px 0 80px 100px;
+    display: flex;
+    gap: 3rem;
+    padding: 4rem 0 4rem 6rem;
 }
 
 .hero div {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 40px;
+    gap: 1rem;
 }
 
 .hero h1 {
@@ -87,31 +84,27 @@ nav ul {
 .hero img {
     width: 60%;
     height: auto;
-    /* max-width: 800px; */
 }
 
 .section-a {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     padding: 80px;
-    gap: 32px;
+    text-align: center;
 }
 
 .container {
+    margin-top: 3rem;
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
-    gap: 32px;
+    gap: 3rem;
 }
 
 .info {
     max-width: 200px;
     flex-shrink: 1;
-    text-align: center;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 1rem;
 }
 
 .info img {
@@ -135,16 +128,18 @@ nav ul {
 .quote-tag {
     text-align: right;
     font-weight: bold;
+    margin-top: 2rem;
 }
 
 .card {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 80px;
+    gap: 3rem;
 
-    margin: 80px auto;
-    padding: 40px 32px;
+    margin: 6rem auto;
+    padding: 3rem 2rem;
     max-width: 800px;
 
     background-color: var(--accent);
@@ -168,11 +163,10 @@ button {
     font-size: 18px;
 }
 
-.card button {
+.secondary-button {
     border: solid var(--light);
 }
 
 footer {
-    justify-content: flex-end;
-    /* padding: 32px; */
+    justify-content: center;
 }
